Assignment-04-TC/y.output
Terminals unused in grammar

    ERROR_TOK
    ID_TOO_LONG_ERROR
    NUM_TOO_LONG_ERROR
    ILLEGAL_CHAR_ERROR
    UNMATCHED_STRING_ERROR
    SPELLING_ERROR
    INVALID_NUM_ERROR


Rules useless in parser due to conflicts

    7 $@2: ε

   18 $@4: ε


State 12 conflicts: 1 shift/reduce
State 14 conflicts: 1 reduce/reduce
State 137 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 translation_unit

    3 translation_unit: translation_unit external_declaration
    4                 | external_declaration

    5 external_declaration: global_variable_declaration
    6                     | function_declaration

    7 $@2: ε

    8 global_variable_declaration: data_type $@2 init_declarator_list SEMICOLON_TOK

    9 init_declarator_list: init_declarator_list COMMA_TOK init_declarator
   10                     | init_declarator

   11 init_declarator: declarator
   12                | declarator ASSIGN_TOK assignment_expr

   13 declarator: ID_TOK
   14           | ID_TOK LBRACKET_TOK INTCONST_TOK RBRACKET_TOK
   15           | ID_TOK LBRACKET_TOK RBRACKET_TOK

   16 $@3: ε

   17 function_declaration: data_type ID_TOK $@3 LPAREN_TOK RPAREN_TOK function_tail

   18 $@4: ε

   19 function_declaration: data_type ID_TOK $@4 LPAREN_TOK parameter_list RPAREN_TOK function_tail

   20 function_tail: SEMICOLON_TOK

   21 $@5: ε

   22 function_tail: $@5 compound_statement

   23 data_type: INT_TOK
   24          | FLOAT_TOK
   25          | CHAR_TOK
   26          | VOID_TOK

   27 parameter_list: parameter_list COMMA_TOK parameter
   28               | parameter

   29 parameter: data_type ID_TOK
   30          | data_type ID_TOK LBRACKET_TOK RBRACKET_TOK

   31 compound_statement: LBRACE_TOK statement_list RBRACE_TOK
   32                   | LBRACE_TOK RBRACE_TOK

   33 statement_list: statement_list statement
   34               | statement

   35 statement: declaration_statement
   36          | expression_statement
   37          | compound_statement
   38          | selection_statement
   39          | iteration_statement
   40          | jump_statement

   41 $@6: ε

   42 declaration_statement: data_type $@6 init_declarator_list SEMICOLON_TOK

   43 expression_statement: expression SEMICOLON_TOK
   44                     | SEMICOLON_TOK

   45 selection_statement: IF_TOK LPAREN_TOK expression RPAREN_TOK statement
   46                    | IF_TOK LPAREN_TOK expression RPAREN_TOK statement ELSE_TOK statement

   47 iteration_statement: WHILE_TOK LPAREN_TOK expression RPAREN_TOK statement
   48                    | FOR_TOK LPAREN_TOK expression_statement expression_statement RPAREN_TOK statement
   49                    | FOR_TOK LPAREN_TOK expression_statement expression_statement expression RPAREN_TOK statement
   50                    | DO_TOK statement WHILE_TOK LPAREN_TOK expression RPAREN_TOK SEMICOLON_TOK

   51 jump_statement: RETURN_TOK expression SEMICOLON_TOK
   52               | RETURN_TOK SEMICOLON_TOK

   53 expression: assignment_expr
   54           | expression COMMA_TOK assignment_expr

   55 assignment_expr: ternary_expr
   56                | unary_expr ASSIGN_TOK assignment_expr
   57                | unary_expr ADD_ASSIGN_TOK assignment_expr
   58                | unary_expr SUB_ASSIGN_TOK assignment_expr
   59                | unary_expr MUL_ASSIGN_TOK assignment_expr
   60                | unary_expr DIV_ASSIGN_TOK assignment_expr
   61                | unary_expr MOD_ASSIGN_TOK assignment_expr

   62 ternary_expr: logical_or_expr
   63             | logical_or_expr TERNARY_TOK expression COLON_TOK ternary_expr

   64 logical_or_expr: logical_and_expr
   65                | logical_or_expr OR_TOK logical_and_expr

   66 logical_and_expr: bit_or_expr
   67                 | logical_and_expr AND_TOK bit_or_expr

   68 bit_or_expr: bit_xor_expr
   69            | bit_or_expr BIT_OR_TOK bit_xor_expr

   70 bit_xor_expr: bit_and_expr
   71             | bit_xor_expr BIT_XOR_TOK bit_and_expr

   72 bit_and_expr: equality_expr
   73             | bit_and_expr BIT_AND_TOK equality_expr

   74 equality_expr: relational_expr
   75              | equality_expr EQ_TOK relational_expr
   76              | equality_expr NEQ_TOK relational_expr

   77 relational_expr: shift_expr
   78                | relational_expr LT_TOK shift_expr
   79                | relational_expr GT_TOK shift_expr
   80                | relational_expr LE_TOK shift_expr
   81                | relational_expr GE_TOK shift_expr

   82 shift_expr: additive_expr
   83           | shift_expr BIT_LSHIFT_TOK additive_expr
   84           | shift_expr BIT_RSHIFT_TOK additive_expr

   85 additive_expr: multiplicative_expr
   86              | additive_expr ADD_TOK multiplicative_expr
   87              | additive_expr SUB_TOK multiplicative_expr

   88 multiplicative_expr: unary_expr
   89                    | multiplicative_expr MUL_TOK unary_expr
   90                    | multiplicative_expr DIV_TOK unary_expr
   91                    | multiplicative_expr MOD_TOK unary_expr

   92 unary_expr: postfix_expr
   93           | INC_TOK unary_expr
   94           | DEC_TOK unary_expr
   95           | unary_operator unary_expr

   96 unary_operator: ADD_TOK
   97               | SUB_TOK
   98               | NOT_TOK
   99               | BIT_NOT_TOK

  100 postfix_expr: primary_expr
  101             | postfix_expr LBRACKET_TOK expression RBRACKET_TOK
  102             | postfix_expr LPAREN_TOK RPAREN_TOK
  103             | postfix_expr LPAREN_TOK argument_list RPAREN_TOK
  104             | postfix_expr INC_TOK
  105             | postfix_expr DEC_TOK

  106 argument_list: argument_list COMMA_TOK expression
  107              | expression

  108 primary_expr: ID_TOK
  109             | INTCONST_TOK
  110             | FLOATCONST_TOK
  111             | STRING_TOK
  112             | LPAREN_TOK expression RPAREN_TOK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT_TOK <type_val> (258) 23
    FLOAT_TOK <type_val> (259) 24
    CHAR_TOK <type_val> (260) 25
    VOID_TOK <type_val> (261) 26
    WHILE_TOK (262) 47 50
    FOR_TOK (263) 48 49
    DO_TOK (264) 50
    IF_TOK (265) 45 46
    ELSE_TOK (266) 46
    RETURN_TOK (267) 51 52
    ID_TOK <string_val> (268) 13 14 15 17 19 29 30 108
    STRING_TOK <string_val> (269) 111
    INTCONST_TOK <int_val> (270) 14 109
    FLOATCONST_TOK <float_val> (271) 110
    ADD_TOK (272) 86 96
    SUB_TOK (273) 87 97
    MUL_TOK (274) 89
    DIV_TOK (275) 90
    MOD_TOK (276) 91
    LT_TOK (277) 78
    GT_TOK (278) 79
    LE_TOK (279) 80
    GE_TOK (280) 81
    EQ_TOK (281) 75
    NEQ_TOK (282) 76
    AND_TOK (283) 67
    OR_TOK (284) 65
    NOT_TOK (285) 98
    BIT_AND_TOK (286) 73
    BIT_OR_TOK (287) 69
    BIT_XOR_TOK (288) 71
    BIT_NOT_TOK (289) 99
    BIT_LSHIFT_TOK (290) 83
    BIT_RSHIFT_TOK (291) 84
    ASSIGN_TOK (292) 12 56
    ADD_ASSIGN_TOK (293) 57
    SUB_ASSIGN_TOK (294) 58
    MUL_ASSIGN_TOK (295) 59
    DIV_ASSIGN_TOK (296) 60
    MOD_ASSIGN_TOK (297) 61
    INC_TOK (298) 93 104
    DEC_TOK (299) 94 105
    TERNARY_TOK (300) 63
    COLON_TOK (301) 63
    LPAREN_TOK (302) 17 19 45 46 47 48 49 50 102 103 112
    RPAREN_TOK (303) 17 19 45 46 47 48 49 50 102 103 112
    LBRACE_TOK (304) 31 32
    RBRACE_TOK (305) 31 32
    LBRACKET_TOK (306) 14 15 30 101
    RBRACKET_TOK (307) 14 15 30 101
    SEMICOLON_TOK (308) 8 20 42 43 44 50 51 52
    COMMA_TOK (309) 9 27 54 106
    ERROR_TOK (310)
    ID_TOO_LONG_ERROR (311)
    NUM_TOO_LONG_ERROR (312)
    ILLEGAL_CHAR_ERROR (313)
    UNMATCHED_STRING_ERROR (314)
    SPELLING_ERROR (315)
    INVALID_NUM_ERROR (316)
    LOWER_THAN_ELSE (317)
    UNARY_MINUS (318)
    UNARY_PLUS (319)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program (66)
        on left: 2
        on right: 0
    $@1 (67)
        on left: 1
        on right: 2
    translation_unit (68)
        on left: 3 4
        on right: 2 3
    external_declaration (69)
        on left: 5 6
        on right: 3 4
    global_variable_declaration (70)
        on left: 8
        on right: 5
    $@2 (71)
        on left: 7
        on right: 8
    init_declarator_list (72)
        on left: 9 10
        on right: 8 9 42
    init_declarator (73)
        on left: 11 12
        on right: 9 10
    declarator (74)
        on left: 13 14 15
        on right: 11 12
    function_declaration (75)
        on left: 17 19
        on right: 6
    $@3 (76)
        on left: 16
        on right: 17
    $@4 (77)
        on left: 18
        on right: 19
    function_tail (78)
        on left: 20 22
        on right: 17 19
    $@5 (79)
        on left: 21
        on right: 22
    data_type <type_val> (80)
        on left: 23 24 25 26
        on right: 8 17 19 29 30 42
    parameter_list (81)
        on left: 27 28
        on right: 19 27
    parameter (82)
        on left: 29 30
        on right: 27 28
    compound_statement (83)
        on left: 31 32
        on right: 22 37
    statement_list (84)
        on left: 33 34
        on right: 31 33
    statement (85)
        on left: 35 36 37 38 39 40
        on right: 33 34 45 46 47 48 49 50
    declaration_statement (86)
        on left: 42
        on right: 35
    $@6 (87)
        on left: 41
        on right: 42
    expression_statement (88)
        on left: 43 44
        on right: 36 48 49
    selection_statement (89)
        on left: 45 46
        on right: 38
    iteration_statement (90)
        on left: 47 48 49 50
        on right: 39
    jump_statement (91)
        on left: 51 52
        on right: 40
    expression <expr_info> (92)
        on left: 53 54
        on right: 43 45 46 47 49 50 51 54 63 101 106 107 112
    assignment_expr <expr_info> (93)
        on left: 55 56 57 58 59 60 61
        on right: 12 53 54 56 57 58 59 60 61
    ternary_expr <expr_info> (94)
        on left: 62 63
        on right: 55 63
    logical_or_expr <expr_info> (95)
        on left: 64 65
        on right: 62 63 65
    logical_and_expr <expr_info> (96)
        on left: 66 67
        on right: 64 65 67
    bit_or_expr <expr_info> (97)
        on left: 68 69
        on right: 66 67 69
    bit_xor_expr <expr_info> (98)
        on left: 70 71
        on right: 68 69 71
    bit_and_expr <expr_info> (99)
        on left: 72 73
        on right: 70 71 73
    equality_expr <expr_info> (100)
        on left: 74 75 76
        on right: 72 73 75 76
    relational_expr <expr_info> (101)
        on left: 77 78 79 80 81
        on right: 74 75 76 78 79 80 81
    shift_expr <expr_info> (102)
        on left: 82 83 84
        on right: 77 78 79 80 81 83 84
    additive_expr <expr_info> (103)
        on left: 85 86 87
        on right: 82 83 84 86 87
    multiplicative_expr <expr_info> (104)
        on left: 88 89 90 91
        on right: 85 86 87 89 90 91
    unary_expr <expr_info> (105)
        on left: 92 93 94 95
        on right: 56 57 58 59 60 61 88 89 90 91 93 94 95
    unary_operator (106)
        on left: 96 97 98 99
        on right: 95
    postfix_expr <expr_info> (107)
        on left: 100 101 102 103 104 105
        on right: 92 101 102 103 104 105
    argument_list (108)
        on left: 106 107
        on right: 103 106
    primary_expr <expr_info> (109)
        on left: 108 109 110 111 112
        on right: 100


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • translation_unit

    INT_TOK    shift, and go to state 4
    FLOAT_TOK  shift, and go to state 5
    CHAR_TOK   shift, and go to state 6
    VOID_TOK   shift, and go to state 7

    translation_unit             go to state 8
    external_declaration         go to state 9
    global_variable_declaration  go to state 10
    function_declaration         go to state 11
    data_type                    go to state 12


State 3

    0 $accept: program $end •

    $default  accept


State 4

   23 data_type: INT_TOK •

    $default  reduce using rule 23 (data_type)


State 5

   24 data_type: FLOAT_TOK •

    $default  reduce using rule 24 (data_type)


State 6

   25 data_type: CHAR_TOK •

    $default  reduce using rule 25 (data_type)


State 7

   26 data_type: VOID_TOK •

    $default  reduce using rule 26 (data_type)


State 8

    2 program: $@1 translation_unit •
    3 translation_unit: translation_unit • external_declaration

    INT_TOK    shift, and go to state 4
    FLOAT_TOK  shift, and go to state 5
    CHAR_TOK   shift, and go to state 6
    VOID_TOK   shift, and go to state 7

    $default  reduce using rule 2 (program)

    external_declaration         go to state 13
    global_variable_declaration  go to state 10
    function_declaration         go to state 11
    data_type                    go to state 12


State 9

    4 translation_unit: external_declaration •

    $default  reduce using rule 4 (translation_unit)


State 10

    5 external_declaration: global_variable_declaration •

    $default  reduce using rule 5 (external_declaration)


State 11

    6 external_declaration: function_declaration •

    $default  reduce using rule 6 (external_declaration)


State 12

    8 global_variable_declaration: data_type • $@2 init_declarator_list SEMICOLON_TOK
   17 function_declaration: data_type • ID_TOK $@3 LPAREN_TOK RPAREN_TOK function_tail
   19                     | data_type • ID_TOK $@4 LPAREN_TOK parameter_list RPAREN_TOK function_tail

    ID_TOK  shift, and go to state 14

    ID_TOK  [reduce using rule 7 ($@2)]

    $@2  go to state 15


State 13

    3 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 3 (translation_unit)


State 14

   17 function_declaration: data_type ID_TOK • $@3 LPAREN_TOK RPAREN_TOK function_tail
   19                     | data_type ID_TOK • $@4 LPAREN_TOK parameter_list RPAREN_TOK function_tail

    LPAREN_TOK  reduce using rule 16 ($@3)
    LPAREN_TOK  [reduce using rule 18 ($@4)]
    $default    reduce using rule 16 ($@3)

    $@3  go to state 16
    $@4  go to state 17


State 15

    8 global_variable_declaration: data_type $@2 • init_declarator_list SEMICOLON_TOK

    ID_TOK  shift, and go to state 18

    init_declarator_list  go to state 19
    init_declarator       go to state 20
    declarator            go to state 21


State 16

   17 function_declaration: data_type ID_TOK $@3 • LPAREN_TOK RPAREN_TOK function_tail

    LPAREN_TOK  shift, and go to state 22


State 17

   19 function_declaration: data_type ID_TOK $@4 • LPAREN_TOK parameter_list RPAREN_TOK function_tail

    LPAREN_TOK  shift, and go to state 23


State 18

   13 declarator: ID_TOK •
   14           | ID_TOK • LBRACKET_TOK INTCONST_TOK RBRACKET_TOK
   15           | ID_TOK • LBRACKET_TOK RBRACKET_TOK

    LBRACKET_TOK  shift, and go to state 24

    $default  reduce using rule 13 (declarator)


State 19

    8 global_variable_declaration: data_type $@2 init_declarator_list • SEMICOLON_TOK
    9 init_declarator_list: init_declarator_list • COMMA_TOK init_declarator

    SEMICOLON_TOK  shift, and go to state 25
    COMMA_TOK      shift, and go to state 26


State 20

   10 init_declarator_list: init_declarator •

    $default  reduce using rule 10 (init_declarator_list)


State 21

   11 init_declarator: declarator •
   12                | declarator • ASSIGN_TOK assignment_expr

    ASSIGN_TOK  shift, and go to state 27

    $default  reduce using rule 11 (init_declarator)


State 22

   17 function_declaration: data_type ID_TOK $@3 LPAREN_TOK • RPAREN_TOK function_tail

    RPAREN_TOK  shift, and go to state 28


State 23

   19 function_declaration: data_type ID_TOK $@4 LPAREN_TOK • parameter_list RPAREN_TOK function_tail

    INT_TOK    shift, and go to state 4
    FLOAT_TOK  shift, and go to state 5
    CHAR_TOK   shift, and go to state 6
    VOID_TOK   shift, and go to state 7

    data_type       go to state 29
    parameter_list  go to state 30
    parameter       go to state 31


State 24

   14 declarator: ID_TOK LBRACKET_TOK • INTCONST_TOK RBRACKET_TOK
   15           | ID_TOK LBRACKET_TOK • RBRACKET_TOK

    INTCONST_TOK  shift, and go to state 32
    RBRACKET_TOK  shift, and go to state 33


State 25

    8 global_variable_declaration: data_type $@2 init_declarator_list SEMICOLON_TOK •

    $default  reduce using rule 8 (global_variable_declaration)


State 26

    9 init_declarator_list: init_declarator_list COMMA_TOK • init_declarator

    ID_TOK  shift, and go to state 18

    init_declarator  go to state 34
    declarator       go to state 21


State 27

   12 init_declarator: declarator ASSIGN_TOK • assignment_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    assignment_expr      go to state 46
    ternary_expr         go to state 47
    logical_or_expr      go to state 48
    logical_and_expr     go to state 49
    bit_or_expr          go to state 50
    bit_xor_expr         go to state 51
    bit_and_expr         go to state 52
    equality_expr        go to state 53
    relational_expr      go to state 54
    shift_expr           go to state 55
    additive_expr        go to state 56
    multiplicative_expr  go to state 57
    unary_expr           go to state 58
    unary_operator       go to state 59
    postfix_expr         go to state 60
    primary_expr         go to state 61


State 28

   17 function_declaration: data_type ID_TOK $@3 LPAREN_TOK RPAREN_TOK • function_tail

    SEMICOLON_TOK  shift, and go to state 62

    $default  reduce using rule 21 ($@5)

    function_tail  go to state 63
    $@5            go to state 64


State 29

   29 parameter: data_type • ID_TOK
   30          | data_type • ID_TOK LBRACKET_TOK RBRACKET_TOK

    ID_TOK  shift, and go to state 65


State 30

   19 function_declaration: data_type ID_TOK $@4 LPAREN_TOK parameter_list • RPAREN_TOK function_tail
   27 parameter_list: parameter_list • COMMA_TOK parameter

    RPAREN_TOK  shift, and go to state 66
    COMMA_TOK   shift, and go to state 67


State 31

   28 parameter_list: parameter •

    $default  reduce using rule 28 (parameter_list)


State 32

   14 declarator: ID_TOK LBRACKET_TOK INTCONST_TOK • RBRACKET_TOK

    RBRACKET_TOK  shift, and go to state 68


State 33

   15 declarator: ID_TOK LBRACKET_TOK RBRACKET_TOK •

    $default  reduce using rule 15 (declarator)


State 34

    9 init_declarator_list: init_declarator_list COMMA_TOK init_declarator •

    $default  reduce using rule 9 (init_declarator_list)


State 35

  108 primary_expr: ID_TOK •

    $default  reduce using rule 108 (primary_expr)


State 36

  111 primary_expr: STRING_TOK •

    $default  reduce using rule 111 (primary_expr)


State 37

  109 primary_expr: INTCONST_TOK •

    $default  reduce using rule 109 (primary_expr)


State 38

  110 primary_expr: FLOATCONST_TOK •

    $default  reduce using rule 110 (primary_expr)


State 39

   96 unary_operator: ADD_TOK •

    $default  reduce using rule 96 (unary_operator)


State 40

   97 unary_operator: SUB_TOK •

    $default  reduce using rule 97 (unary_operator)


State 41

   98 unary_operator: NOT_TOK •

    $default  reduce using rule 98 (unary_operator)


State 42

   99 unary_operator: BIT_NOT_TOK •

    $default  reduce using rule 99 (unary_operator)


State 43

   93 unary_expr: INC_TOK • unary_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    unary_expr      go to state 69
    unary_operator  go to state 59
    postfix_expr    go to state 60
    primary_expr    go to state 61


State 44

   94 unary_expr: DEC_TOK • unary_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    unary_expr      go to state 70
    unary_operator  go to state 59
    postfix_expr    go to state 60
    primary_expr    go to state 61


State 45

  112 primary_expr: LPAREN_TOK • expression RPAREN_TOK

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    expression           go to state 71
    assignment_expr      go to state 72
    ternary_expr         go to state 47
    logical_or_expr      go to state 48
    logical_and_expr     go to state 49
    bit_or_expr          go to state 50
    bit_xor_expr         go to state 51
    bit_and_expr         go to state 52
    equality_expr        go to state 53
    relational_expr      go to state 54
    shift_expr           go to state 55
    additive_expr        go to state 56
    multiplicative_expr  go to state 57
    unary_expr           go to state 58
    unary_operator       go to state 59
    postfix_expr         go to state 60
    primary_expr         go to state 61


State 46

   12 init_declarator: declarator ASSIGN_TOK assignment_expr •

    $default  reduce using rule 12 (init_declarator)


State 47

   55 assignment_expr: ternary_expr •

    $default  reduce using rule 55 (assignment_expr)


State 48

   62 ternary_expr: logical_or_expr •
   63             | logical_or_expr • TERNARY_TOK expression COLON_TOK ternary_expr
   65 logical_or_expr: logical_or_expr • OR_TOK logical_and_expr

    OR_TOK       shift, and go to state 73
    TERNARY_TOK  shift, and go to state 74

    $default  reduce using rule 62 (ternary_expr)


State 49

   64 logical_or_expr: logical_and_expr •
   67 logical_and_expr: logical_and_expr • AND_TOK bit_or_expr

    AND_TOK  shift, and go to state 75

    $default  reduce using rule 64 (logical_or_expr)


State 50

   66 logical_and_expr: bit_or_expr •
   69 bit_or_expr: bit_or_expr • BIT_OR_TOK bit_xor_expr

    BIT_OR_TOK  shift, and go to state 76

    $default  reduce using rule 66 (logical_and_expr)


State 51

   68 bit_or_expr: bit_xor_expr •
   71 bit_xor_expr: bit_xor_expr • BIT_XOR_TOK bit_and_expr

    BIT_XOR_TOK  shift, and go to state 77

    $default  reduce using rule 68 (bit_or_expr)


State 52

   70 bit_xor_expr: bit_and_expr •
   73 bit_and_expr: bit_and_expr • BIT_AND_TOK equality_expr

    BIT_AND_TOK  shift, and go to state 78

    $default  reduce using rule 70 (bit_xor_expr)


State 53

   72 bit_and_expr: equality_expr •
   75 equality_expr: equality_expr • EQ_TOK relational_expr
   76              | equality_expr • NEQ_TOK relational_expr

    EQ_TOK   shift, and go to state 79
    NEQ_TOK  shift, and go to state 80

    $default  reduce using rule 72 (bit_and_expr)


State 54

   74 equality_expr: relational_expr •
   78 relational_expr: relational_expr • LT_TOK shift_expr
   79                | relational_expr • GT_TOK shift_expr
   80                | relational_expr • LE_TOK shift_expr
   81                | relational_expr • GE_TOK shift_expr

    LT_TOK  shift, and go to state 81
    GT_TOK  shift, and go to state 82
    LE_TOK  shift, and go to state 83
    GE_TOK  shift, and go to state 84

    $default  reduce using rule 74 (equality_expr)


State 55

   77 relational_expr: shift_expr •
   83 shift_expr: shift_expr • BIT_LSHIFT_TOK additive_expr
   84           | shift_expr • BIT_RSHIFT_TOK additive_expr

    BIT_LSHIFT_TOK  shift, and go to state 85
    BIT_RSHIFT_TOK  shift, and go to state 86

    $default  reduce using rule 77 (relational_expr)


State 56

   82 shift_expr: additive_expr •
   86 additive_expr: additive_expr • ADD_TOK multiplicative_expr
   87              | additive_expr • SUB_TOK multiplicative_expr

    ADD_TOK  shift, and go to state 87
    SUB_TOK  shift, and go to state 88

    $default  reduce using rule 82 (shift_expr)


State 57

   85 additive_expr: multiplicative_expr •
   89 multiplicative_expr: multiplicative_expr • MUL_TOK unary_expr
   90                    | multiplicative_expr • DIV_TOK unary_expr
   91                    | multiplicative_expr • MOD_TOK unary_expr

    MUL_TOK  shift, and go to state 89
    DIV_TOK  shift, and go to state 90
    MOD_TOK  shift, and go to state 91

    $default  reduce using rule 85 (additive_expr)


State 58

   56 assignment_expr: unary_expr • ASSIGN_TOK assignment_expr
   57                | unary_expr • ADD_ASSIGN_TOK assignment_expr
   58                | unary_expr • SUB_ASSIGN_TOK assignment_expr
   59                | unary_expr • MUL_ASSIGN_TOK assignment_expr
   60                | unary_expr • DIV_ASSIGN_TOK assignment_expr
   61                | unary_expr • MOD_ASSIGN_TOK assignment_expr
   88 multiplicative_expr: unary_expr •

    ASSIGN_TOK      shift, and go to state 92
    ADD_ASSIGN_TOK  shift, and go to state 93
    SUB_ASSIGN_TOK  shift, and go to state 94
    MUL_ASSIGN_TOK  shift, and go to state 95
    DIV_ASSIGN_TOK  shift, and go to state 96
    MOD_ASSIGN_TOK  shift, and go to state 97

    $default  reduce using rule 88 (multiplicative_expr)


State 59

   95 unary_expr: unary_operator • unary_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    unary_expr      go to state 98
    unary_operator  go to state 59
    postfix_expr    go to state 60
    primary_expr    go to state 61


State 60

   92 unary_expr: postfix_expr •
  101 postfix_expr: postfix_expr • LBRACKET_TOK expression RBRACKET_TOK
  102             | postfix_expr • LPAREN_TOK RPAREN_TOK
  103             | postfix_expr • LPAREN_TOK argument_list RPAREN_TOK
  104             | postfix_expr • INC_TOK
  105             | postfix_expr • DEC_TOK

    INC_TOK       shift, and go to state 99
    DEC_TOK       shift, and go to state 100
    LPAREN_TOK    shift, and go to state 101
    LBRACKET_TOK  shift, and go to state 102

    $default  reduce using rule 92 (unary_expr)


State 61

  100 postfix_expr: primary_expr •

    $default  reduce using rule 100 (postfix_expr)


State 62

   20 function_tail: SEMICOLON_TOK •

    $default  reduce using rule 20 (function_tail)


State 63

   17 function_declaration: data_type ID_TOK $@3 LPAREN_TOK RPAREN_TOK function_tail •

    $default  reduce using rule 17 (function_declaration)


State 64

   22 function_tail: $@5 • compound_statement

    LBRACE_TOK  shift, and go to state 103

    compound_statement  go to state 104


State 65

   29 parameter: data_type ID_TOK •
   30          | data_type ID_TOK • LBRACKET_TOK RBRACKET_TOK

    LBRACKET_TOK  shift, and go to state 105

    $default  reduce using rule 29 (parameter)


State 66

   19 function_declaration: data_type ID_TOK $@4 LPAREN_TOK parameter_list RPAREN_TOK • function_tail

    SEMICOLON_TOK  shift, and go to state 62

    $default  reduce using rule 21 ($@5)

    function_tail  go to state 106
    $@5            go to state 64


State 67

   27 parameter_list: parameter_list COMMA_TOK • parameter

    INT_TOK    shift, and go to state 4
    FLOAT_TOK  shift, and go to state 5
    CHAR_TOK   shift, and go to state 6
    VOID_TOK   shift, and go to state 7

    data_type  go to state 29
    parameter  go to state 107


State 68

   14 declarator: ID_TOK LBRACKET_TOK INTCONST_TOK RBRACKET_TOK •

    $default  reduce using rule 14 (declarator)


State 69

   93 unary_expr: INC_TOK unary_expr •

    $default  reduce using rule 93 (unary_expr)


State 70

   94 unary_expr: DEC_TOK unary_expr •

    $default  reduce using rule 94 (unary_expr)


State 71

   54 expression: expression • COMMA_TOK assignment_expr
  112 primary_expr: LPAREN_TOK expression • RPAREN_TOK

    RPAREN_TOK  shift, and go to state 108
    COMMA_TOK   shift, and go to state 109


State 72

   53 expression: assignment_expr •

    $default  reduce using rule 53 (expression)


State 73

   65 logical_or_expr: logical_or_expr OR_TOK • logical_and_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    logical_and_expr     go to state 110
    bit_or_expr          go to state 50
    bit_xor_expr         go to state 51
    bit_and_expr         go to state 52
    equality_expr        go to state 53
    relational_expr      go to state 54
    shift_expr           go to state 55
    additive_expr        go to state 56
    multiplicative_expr  go to state 57
    unary_expr           go to state 111
    unary_operator       go to state 59
    postfix_expr         go to state 60
    primary_expr         go to state 61


State 74

   63 ternary_expr: logical_or_expr TERNARY_TOK • expression COLON_TOK ternary_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    expression           go to state 112
    assignment_expr      go to state 72
    ternary_expr         go to state 47
    logical_or_expr      go to state 48
    logical_and_expr     go to state 49
    bit_or_expr          go to state 50
    bit_xor_expr         go to state 51
    bit_and_expr         go to state 52
    equality_expr        go to state 53
    relational_expr      go to state 54
    shift_expr           go to state 55
    additive_expr        go to state 56
    multiplicative_expr  go to state 57
    unary_expr           go to state 58
    unary_operator       go to state 59
    postfix_expr         go to state 60
    primary_expr         go to state 61


State 75

   67 logical_and_expr: logical_and_expr AND_TOK • bit_or_expr

    ID_TOK          shift, and go to state 35
    STRING_TOK      shift, and go to state 36
    INTCONST_TOK    shift, and go to state 37
    FLOATCONST_TOK  shift, and go to state 38
    ADD_TOK         shift, and go to state 39
    SUB_TOK         shift, and go to state 40
    NOT_TOK         shift, and go to state 41
    BIT_NOT_TOK     shift, and go to state 42
    INC_TOK         shift, and go to state 43
    DEC_TOK         shift, and go to state 44
    LPAREN_TOK      shift, and go to state 45

    bit_or_expr          go to state 113
    bit_xor_expr         go to state 51
    bit_and_expr         go to state 52
    equality_expr        go to state 53
    relational_expr      go to state 54
    shift_expr           go to state 55
    additive_expr        go to state 56
    multiplicative_expr  go to state 57
    unary_expr           go to state 111
    unary_operator       go to state 59
    postfix_expr         go to state 60
    primary_expr         go to state 61


State 76

   69 bit_or_expr: bit_or_expr BIT_OR_TOK • bit_xor_expr
